--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
+    "axios": "^1.7.9",
+    "openai": "^4.85.4",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
