--- a/package.json
+++ b/package.json
@@ -9,19 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.30.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
-    "motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "axios": "^1.6.0",
-    "openai": "^4.10.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
