--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
-    "axios": "^1.7.9",
-    "openai": "^4.85.4",
     "next": "15.1.7",
+    "openai": "^4.85.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
