--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.8.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
+    "mongodb": "^6.13.1",
     "next": "15.1.7",
     "openai": "^4.85.4",
     "react": "^19.0.0",
